fix: clean invisible edge when toggling tool mode (#4795)
* Fix invisible edges bug

* Removed elevate edges on select

* Fix style of reconnecting edge

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -144,6 +144,12 @@ body {
   transition-duration: 150ms;
   stroke-width: 2px !important;
 }
+.react-flow__connection path {
+  transition: color;
+  stroke: var(--connection) !important;
+  transition-duration: 150ms;
+  stroke-width: 2px !important;
+}
 
 .react-flow__edge.running .react-flow__edge-path {
   stroke: hsl(var(--foreground)) !important;
